Add ingredients and cooking instructions in lists

--- a/recipes/lechon-kawali.html
+++ b/recipes/lechon-kawali.html
@@ -12,6 +12,8 @@
 
         <img src="../images/lechon.jpeg" alt="Finished Lechon Kawali">
 
+        <!-- Add Description of Lechon Kawali -->
+
         <h2>Description</h2>
 
         <p><em>Lechon Kawali</em> is a traditional Filipino dish that consists 
@@ -19,7 +21,30 @@
         also be paired with optional sauces on the side including <em>Mang Tomas</em> 
         All-Purpose sauce or traditional soy sauce and vinegar dip.</p>
 
+        <!-- Add Ingredients of Lechon Kawali in unordered list-->
+
         <h2>Ingredients</h2>
 
+        <ul>
+            <li>1 &frac12; pounds of pork belly, cut into cubed pieces</li>
+            <li>3 gloves of garlic, crushed</li>
+            <li>2 bay leaves</li>
+            <li>&frac12; teaspoon of salt</li>
+            <li>&frac12; teaspoon of ground black pepper</li>
+            <li>2 cups of oil for frying</li>
+        </ul>
+
+        <!-- Add steps to cook Lechon in ordered list -->
+
+        <ol>
+            <li>Combine porkbelly, garlic, bay leaves, salt and pepper in a skillet</li>
+            <li>Pour water until covered</li>
+            <li>Bring to a boil, reduce heat, and simmer until tender (35-45 min)</li>
+            <li>Drain and let sit at room temperature until pork air-dries</li>
+            <li>Heat oil in deep-fryer or large saucepan to 350 dF</li>
+            <li>Fry pork in hot oil in batches until golden brown (3-5 min)</li>
+            <li>Remove fried pork with a slotted spoon</li>
+            <li>Drain on a paper towel-lined plate</li>
+        </ol>
     </body>
 </html>
