Update with cooking steps heading

--- a/recipes/lechon-kawali.html
+++ b/recipes/lechon-kawali.html
@@ -36,6 +36,8 @@
 
         <!-- Add steps to cook Lechon in ordered list -->
 
+        <h2>Cooking Steps</h2>
+
         <ol>
             <li>Combine porkbelly, garlic, bay leaves, salt and pepper in a skillet</li>
             <li>Pour water until covered</li>
