Add pages for recipes for both dinuguan and pork adobo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lechon-kawali.html">Recipe for Lechon Kawali</a>
+
+        <ul>
+        <li><a href="recipes/lechon-kawali.html">Recipe for Lechon Kawali</a></li>
+        <li><a href="recipes/dinuguan.html">Recipe for Dinuguan</a></li>
+        <li><a href="recipes/pork-adobo.html">Recipe for Pork Adobo</a></li>
+        
+        </ul>
     </body>
 </html>
