Update recipes with CSS styles

--- a/recipes/dinuguan.html
+++ b/recipes/dinuguan.html
@@ -5,12 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dinuguan Recipe</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>How to Make Dinuguan (chocolate meat)</h1>
+        <h1 id="diniguan">How to Make Dinuguan (chocolate meat)</h1>
 
-        <img src="../images/dinuguan.jpeg" alt="Dinuguan Image">
+        <div><img class="food" src="../images/dinuguan.jpeg" alt="Dinuguan Image"></div>
 
         <h2>Description</h2>
             <p><em>Dinuguan</em> also known as "chocolate stew" or "chocolate meat" and 
