--- a/recipes/lechon-kawali.html
+++ b/recipes/lechon-kawali.html
@@ -5,12 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lechon Kawali Recipe</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>How to Make Lechon Kawali</h1>
+        <h1 id="lechon">How to Make Lechon Kawali</h1>
 
-        <img src="../images/lechon.jpeg" alt="Finished Lechon Kawali">
+        <div><img class="food" src="../images/lechon.jpeg" alt="Finished Lechon Kawali"></div>
 
         <!-- Add Description of Lechon Kawali -->
 
