--- a/recipes/pork-adobo.html
+++ b/recipes/pork-adobo.html
@@ -5,11 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pork Adobo Recipe</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>How to Make Pork Adobo</h1>
-        <img src="../images/porkadobo.jpeg" alt="Pork Adobo Image">
+        <h1 id="adobo">How to Make Pork Adobo</h1>
+        <div><img class="food" src="../images/porkadobo.jpeg" alt="Pork Adobo Image"></div>
 
         <h2>Description</h2>
             <p><em>Pork Adobo</em> is a popular Filipino dish that consists of pork slices
