--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Odin Recipes</h1>
 
         <ul>
+    
         <li><a href="recipes/lechon-kawali.html">Recipe for Lechon Kawali</a></li>
         <li><a href="recipes/dinuguan.html">Recipe for Dinuguan</a></li>
         <li><a href="recipes/pork-adobo.html">Recipe for Pork Adobo</a></li>
